Repaired navbar login/logout state

--- a/employeereview.web/src/components/Navbar.css
+++ b/employeereview.web/src/components/Navbar.css
@@ -2,3 +2,14 @@
     background-color: #d91e18!important;   
 }
 
+.disable-link {
+    pointer-events: none;
+  }
+
+.nav-link{
+    color: #e3e5e8;
+}
+
+.nav-link:hover{
+    color: white !important;
+}
